# TheORCHESTRATEActiveInferenceWorkbench

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  BOOK_SOURCES.md  BRANDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LIBRECHAT_EXTENSIONS_PLAN.md  LICENSE  README.md  RUNTIME_GAPS.md  RUN_LOCAL.md  STUDIO_PLAN.md  WORKSHOP_PLAN.md  docker-compose.yml
ClaudeSpeak/: .dockerignore  .mcp.json  ARCHITECTURE.md
ClaudeSpeak/claude-voice-connector-stdio/: LICENSE  PIPER_MIGRATION.md  README.md  config.yaml  pyproject.toml  start.ps1  start.sh  test_clean.py  test_debug.py  test_mcp.py  test_mcp_clean.py  test_mcp_startup.py  test_piper.py
ClaudeSpeak/claude-voice-connector-stdio/examples/: claude_tool_adapter.py  demo_client.py  sample.ssml
ClaudeSpeak/claude-voice-connector-stdio/src/claude_voice_connector/: __init__.py  __main__.py  audio_player.py  config.py  events.py  ids.py  logging_setup.py  mcp_server.py  metrics.py  piper_tts.py  stdio_main.py  transcript_store.py  ui_server.py  voice_orchestrator.py
ClaudeSpeak/claude-voice-connector-stdio/src/claude_voice_connector/resources/: ssml_guide.md  voice_profiles.yaml
ClaudeSpeak/claude-voice-connector-stdio/tests/: __init__.py  conftest.py  test_events.py  test_player_loopback.py  test_sanitizer.py  test_segmenter.py  test_tts_pipeline.py
Qwen3.6/: BENCHMARKS.md  BLOCKER.md  DEPLOYMENT_SUMMARY.md  HARDWARE_AUDIT.md  RUNBOOK.md  RUNTIME_DECISION.md  compose.librechat-workshop.yml
active_inference/: .formatter.exs  .gitignore  DELIVERABLE.md  README.md  ReadmeAI.MD  (+1 more)
(+1336 files in other folders)
